2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm: (reset_volume): Keep the storage_id
	* perl/Amanda/DB/Catalog2/SQLite.pm: Retry transaction on
	  /UNIQUE constraint failed/

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send CLOSE-VOLUME command only if the volume
	  is opened

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix queue handling

2018-01-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amindexd.c (build_disk_table) Do not use GHashTableIter
	* server-src/cmdfile.c (cmdfile_get_all_glist): New function
	  that return all cmddata in a GList
	* server-src/cmdfile.h (cmdfile_get_all_glist): Add protoype
	* perl/Amanda/Cmdfile.swg (get_all): Wrap cmdfile_get_all_glist

2018-01-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: s/xlog/wal/ in function name for version
	  10 and newer

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (server-src/driver.c): Remove function

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Improvement

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (idle_taper): Check wtaper->vaultqs.vaultq.head

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set sent_first_write and last_started_wtaper

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Improve new_tape

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set TAPER_STATE_TAPE_STARTED on NEW-TAPE

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send dump to first storage

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Add vaulting information
	* server-src/amstatus.pl: Print vaulting information